--- a/views/admin/add-product.ejs
+++ b/views/admin/add-product.ejs
@@ -1,27 +1,43 @@
-<form action="/admin/coupons" method="post">
 
-
-    <div class="container">
-        <div class="row">
-    <div class="col-sm-12 col-xl-6">
-        <div class="bg-secondary rounded h-100 p-4">
-            <h6 class="mb-4">Add Coupon</h6>
-            <label for="floatingInput">Coupon Name</label>
-            <input class="form-control mb-3" type="text" name="couponName" placeholder="Coupon Name"
-                aria-label="default input example">
-                <label for="floatingInput">Amount</label>
-            <input class="form-control mb-3" type="number" name="amount" placeholder="Amount"
-                aria-label="default input example">
-                <label for="floatingInput">Min Purchase</label>
-            <input class="form-control mb-3" type="number" name="minPurchase"  placeholder="MinPurchase"
-                aria-label="default input example">
-                <label for="floatingInput">Expiry Date</label>
-            <input class="form-control mb-3" type="string" name="expirydate"  placeholder="Date"
-                aria-label="default input example">
-                <button type="submit" class="btn btn-primary mt-4">Submit</button>
-    
+<div class="container">
+    <div class="row">
+<form action="/admin/products" method="post">
+<div class="col-sm-12 col-xl-6">
+    <div class="bg-secondary rounded h-100 p-4">
+        <h6 class="mb-4">Add Product</h6>
+        <div class="form-floating mb-3">
+            <input type="text" class="form-control" id="floatingInput"
+                placeholder="Enter Product Name" name="name">
+            <label for="floatingInput">Product Name</label>
+        </div>
+        
+        <div class="form-floating mb-3">
+            <select class="form-select" id="floatingSelect"
+                aria-label="Floating label select example" name="cat">
+                <option selected>Open this select menu</option>
+                <option value="men">One</option>
+                <option value="women">Two</option>
+                <option value="kid">Three</option>
+            </select>
+            <label for="floatingSelect">Categories</label>
+        </div>
+        <div class="form-floating mb-3">
+            <input type="number" class="form-control" id="floatingPassword"
+                placeholder="Pa" name="price">
+            <label for="floatingPassword">Price</label>
+        </div>
+        <div class="mb-3">
+            <label for="formFile" class="form-label">Upload your Image</label>
+            <input class="form-control bg-dark" type="file" id="formFile" >
+        </div>
+        <div class="form-floating">
+            <textarea class="form-control" placeholder="Leave a comment here"
+                id="floatingTextarea" style="height: 150px;" name="description"></textarea>
+            <label for="floatingTextarea">Description</label>
+            <button type="submit" class="btn btn-primary mt-4">Submit</button>
         </div>
     </div>
-    </div>
-    </div>
-    </form>
+</div>
+</form>
+</div>
+</div>
