--- a/views/admin/category.ejs
+++ b/views/admin/category.ejs
@@ -42,9 +42,9 @@
                                         </tr>
                                     </thead>
                                     <tbody>
-                                        <% categoryList.forEach(function(categoryList,){ %> 
+                                        <% categoryList.forEach(function(categoryList,index){ %> 
                                         <tr>
-                                            <th scope="row"><%=1 %>  </th>
+                                            <th scope="row"><%=index+1 %>  </th>
                                             <td><%=categoryList.name %> </td>
                                             <td><%=categoryList.description %> </td>
                                             <td>
