--- a/views/admin/coupon.ejs
+++ b/views/admin/coupon.ejs
@@ -77,9 +77,9 @@
                                         </tr>
                                     </thead>
                                     <tbody>
-                                        <% couponList.forEach(function(couponList,){ %> 
+                                        <% couponList.forEach(function(couponList,index){ %> 
                                         <tr>
-                                            <th scope="row"><%=1 %>  </th>
+                                            <th scope="row"><%=index+1 %>  </th>
                                             <td><%=couponList.name %> </td>
                                             <td><%=couponList.amount %> </td>
                                             <td><%=couponList.minCartAmount%> </td>
