--- a/views/admin/edit-product.ejs
+++ b/views/admin/edit-product.ejs
@@ -1,20 +1,22 @@
 
 <div class="container">
     <div class="row">
-<form action="/admin/products" method="post" enctype="multipart/form-data">
+<form action="/admin/productEdit/<%=product._id%>" method="post" enctype="multipart/form-data">
 <div class="col-sm-12 col-xl-6">
     <div class="bg-secondary rounded h-100 p-4">
         <h6 class="mb-4">Add Product</h6>
         <div class="form-floating mb-3">
             <input type="text" class="form-control" id="floatingInput"
-                placeholder="Enter Product Name" name="name">
+                placeholder="Enter Product Name" name="name" value="<%=product.name %> ">
             <label for="floatingInput">Product Name</label>
         </div>
         
         <div class="form-floating mb-3">
             <select class="form-select" id="floatingSelect"
-                aria-label="Floating label select example" name="cat">
-                <option selected>Open this select menu</option>
+                aria-label="Floating label select example" name="cat" >
+                <!-- <option selected>Open this select menu</option>
+                 -->
+
                 <% categoryList.forEach(function(categoryList){ %>
                 <option value="<%= categoryList._id %> "><%=categoryList.name  %> </option>
                 <% }) %> 
@@ -23,40 +25,47 @@
         </div>
         <div class="form-floating mb-3">
             <input type="number" class="form-control" id="floatingPassword"
-                placeholder="Pa" name="price">
+                placeholder="Pa" name="price"  value="<%=product.price %>">
             <label for="floatingPassword">Price</label>
         </div>
 
         <div class="form-floating mb-3">
             <input type="number" class="form-control" id="floatingPassword"
-                placeholder="Pa" name="stock">
+                placeholder="Pa" name="stock" value="<%=product.stock %>">
             <label for="floatingPassword">Stock</label>
         </div>
 
         <div class="form-floating mb-3">
             <input type="text" class="form-control" id="floatingPassword"
-                placeholder="Pa" name="discount">
+                placeholder="Pa" name="discount" value="<%=product.discount%>">
             <label for="floatingPassword">Discount</label>
         </div>
 
         <div class="form-floating mb-3">
             <input type="number" class="form-control" id="floatingPassword"
-                placeholder="Pa" name="size">
+                placeholder="Pa" name="size" value="<%=product.size %>">
             <label for="floatingPassword">Size</label>
         </div>
-        
+        <img src="/image/productImages/<%=product.image %> " id="imgView" class="mb-3" width="100px" height="100px" alt="">
         <div class="mb-3">
             <label for="formFile" class="form-label">Upload your Image</label>
-            <input class="form-control bg-dark" type="file" id="image"  name="image" multiple>
+            <input class="form-control bg-dark" onchange="viewImage(event)" type="file" id="image"  value="<%=product.image %> " name="image" multiple>
         </div>
         <div class="form-floating">
             <textarea class="form-control" placeholder="Leave a comment here"
-                id="floatingTextarea" style="height: 150px;" name="description"></textarea>
+                id="floatingTextarea" style="height: 150px;" name="description" ></textarea>
             <label for="floatingTextarea">Description</label>
-            <input type="submit" value="Submit" class="btn btn-primary mt-4">
+            <input type="submit" value="Submit" class="btn btn-primary mt-4" >
         </div>
     </div>
 </div>
 </form>
 </div>
 </div>
+
+<script>
+    function viewImage(e){
+        document.getElementById('imgView').src=URL.createObjectURL(e.target.files[0])
+    }
+
+</script>
