--- a/views/admin/category.ejs
+++ b/views/admin/category.ejs
@@ -1,34 +1,14 @@
-<body>
-    <div class="container-fluid position-relative d-flex p-0">
-        <!-- Spinner Start -->
-        <div id="spinner" class="show bg-dark position-fixed translate-middle w-100 vh-100 top-50 start-50 d-flex align-items-center justify-content-center">
-            <div class="spinner-border text-primary" style="width: 3rem; height: 3rem;" role="status">
-                <span class="sr-only">Loading...</span>
-            </div>
-        </div>
-        <!-- Spinner End -->
+<%-include("./layout/admin header.ejs") %>  
 
-
-        <!-- Sidebar Start -->
-        <%-include("../partials/admin sidebar.ejs") %>  
-
-        <!-- Sidebar End -->
-
-
-        <!-- Content Start -->
-        <div class="content">
-            <!-- Navbar Start -->
-            <%-include("../partials/admin header.ejs") %>  
-
-            <!-- Navbar End -->
-
-            <div class="col d-flex justify-content-end">
-                <a href="addcategory" class="btn btn-danger mt-4 mb-4" >Add Category</a>
-          </div>
+            
+          
             <!-- Table Start -->
             <div class="container-fluid pt-4 px-4">
                 <div class="row g-4">
                     <div class="col-12">
+                        <div class="col d-flex justify-content-end">
+                            <a href="addcategory" class="btn btn-danger mt-4 mb-4" >Add Category</a>
+                      </div>
                         <div class="bg-secondary rounded h-100 p-4">
                             <h6 class="mb-4">Category Table</h6>
                             <div class="table-responsive">
@@ -70,26 +50,7 @@
                     
             <!-- Table End -->
 
-
-            <!-- Footer Start -->
-            <div class="container-fluid pt-4 px-4">
-                <div class="bg-secondary rounded-top p-4">
-                    <div class="row">
-                        <div class="col-12 col-sm-6 text-center text-sm-start">
-                            &copy; <a href="#">Your Site Name</a>, All Right Reserved. 
-                        </div>
-                        <div class="col-12 col-sm-6 text-center text-sm-end">
-                            <!--/*** This template is free as long as you keep the footer author’s credit link/attribution link/backlink. If you'd like to use the template without the footer author’s credit link/attribution link/backlink, you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". Thank you for your support. ***/-->
-                            Designed By <a href="https://htmlcodex.com">HTML Codex</a>
-                            <br>Distributed By: <a href="https://themewagon.com" target="_blank">ThemeWagon</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <!-- Footer End -->
-        </div>
         <!-- Content End -->
 
-
      
-</body>
+        <%-include('./layout/admin footer.ejs') %> 
