--- a/views/admin/edit-coupon.ejs
+++ b/views/admin/edit-coupon.ejs
@@ -1,3 +1,6 @@
+<%-include("./layout/admin header.ejs") %>  
+
+ 
  <section>
     <form action="/admin/couponEdit/<%=coup._id%>" method="post">
         <div class="container">
@@ -25,3 +28,6 @@
         </div>
      </form>
  </section>
+
+
+ <%-include('./layout/admin footer.ejs') %> 
