--- a/views/admin/add-coupon.ejs
+++ b/views/admin/add-coupon.ejs
@@ -1,8 +1,11 @@
+<%-include("./layout/admin header.ejs") %>  
+
+
 <form action="/admin/coupons" method="post">
 
 
 <div class="container">
-    <div class="row">
+    <div class="row justify-content-center">
 <div class="col-sm-12 col-xl-6">
     <div class="bg-secondary rounded h-100 p-4">
         <h6 class="mb-4">Add Coupon</h6>
@@ -25,3 +28,5 @@
 </div>
 </div>
 </form>
+
+<%-include('./layout/admin footer.ejs') %> 
