--- a/views/user/layout/user header.ejs
+++ b/views/user/layout/user header.ejs
@@ -21,6 +21,7 @@
     <link rel="stylesheet" href="/user/css/owl.carousel.min.css" type="text/css">
     <link rel="stylesheet" href="/user/css/slicknav.min.css" type="text/css">
     <link rel="stylesheet" href="/user/css/style.css" type="text/css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css">
 </head>
 
 <body>
@@ -138,7 +139,7 @@
                     <div class="header__nav__option">
                         <a href="#" class="search-switch"><img src="/user/img/icon/search.png" alt=""></a>
                         <a href="#"><img src="/user/img/icon/heart.png" alt=""></a>
-                        <a href="#"><img src="/user/img/icon/cart.png" alt=""> <span>0</span></a>
+                        <a href="/viewCart"><img src="/user/img/icon/cart.png" alt=""> <span>0</span></a>
                         <div class="price">$0.00</div>
                     </div>
                 </div>
