--- a/views/user/shop.ejs
+++ b/views/user/shop.ejs
@@ -218,7 +218,7 @@
                                 </div>
                                 <div class="product__item__text">
                                     <h6><%=productList.name %></h6>
-                                    <a href="#" class="add-cart">+ Add To Cart</a>
+                                    <a href="/addToCart/<%= productList._id %> " class="add-cart">+ Add To Cart</a>
                                     <div class="rating">
                                         <i class="fa fa-star-o"></i>
                                         <i class="fa fa-star-o"></i>
