wishlist adding product and displaying product

--- a/views/admin/users.ejs
+++ b/views/admin/users.ejs
@@ -4,6 +4,7 @@
     
 
              <!-- Table Start -->
+             <section>
             <div class="container-fluid pt-4 px-4">
                 <div class="row g-4">
                     <div class="col-12">
@@ -53,6 +54,6 @@
                     </div>
                 </div>
             </div>
-                    
+        </section>
             <!-- Table End -->
             <%-include('./layout/admin footer.ejs') %> 
