--- a/views/user/layout/user header.ejs
+++ b/views/user/layout/user header.ejs
@@ -23,6 +23,7 @@
     <link rel="stylesheet" href="/user/css/style.css" type="text/css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/sweetalert/2.1.2/sweetalert.min.js"></script>
     <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </head>
 
@@ -79,7 +80,7 @@
                         <% if (users){ %> 
                         <div class="header__top__right">
                             <div class="header__top__links">
-                                <a href="/logout">Sign out</a>
+                                <a href="/logout">Sign Out</a>
                                 <a href="#">FAQs</a>
                             </div>
                             <div class="header__top__hover">
@@ -140,7 +141,7 @@
                 <div class="col-lg-3 col-md-3">
                     <div class="header__nav__option" >
                         <a href="#" class="search-switch"><i class="bi bi-search" style="color: black; font-size: 17px;"></i></a>
-                        <a href="#"><i class="bi bi-heart" style="color: black; font-size: 17px;"></i></a>
+                        <a href="/wishlist"><i class="bi bi-heart" style="color: black; font-size: 17px;"></i></a>
                         <% if(users) {%> 
                         <a href="/viewCart"><i class="bi bi-cart2" style="color: black; font-size: 20px;"></i>  <span class="position-absolute top-0 start-100 translate-middle badge bg-primary rounded-circle text-light" style="font-size: 1rem; top: 0; right: -10;"><%= count %> </span>
                         </a>
