--- a/views/user/shop.ejs
+++ b/views/user/shop.ejs
@@ -211,7 +211,7 @@
                             <div class="product__item">
                                 <div class="product__item__pic set-bg" data-setbg="/image/productImages/<%=productList.image[0] %> ">
                                     <ul class="product__hover">
-                                        <li><a href="#"><img src="/user/img/icon/heart.png" alt=""></a></li>
+                                        <li><a href="/addToWishlist/<%= productList._id %> "><img src="/user/img/icon/heart.png" alt=""></a></li>
                                         <li><a href="#"><img src="/user/img/icon/compare.png" alt=""> <span>Compare</span></a> </li>
                                         <li><a href="#"><img src="/user/img/icon/search.png" alt=""></a></li>
                                     </ul>
